fix: waybar workspace switcher spacing

--- a/waybar-horizontal/style.css
+++ b/waybar-horizontal/style.css
@@ -18,16 +18,16 @@ window#waybar {
 #clock,
 #backlight {
   padding: 0px 10px;
-  margin: 0px 0px;
 }
 
 #workspaces {
-	padding: 4px 4px;
+	padding: 4px;
 }
 
 #workspaces button {
-  border-radius: 3px;
+    padding: 4px; 
 }
+
 
 #workspaces button.active {
   color: #89b4fa;
